# othello-rs

./: Cargo.toml  README.md
src/: custom_elements.rs  game.rs  main.rs  menu.rs  termin.rs
src/game/: board.rs  chat.rs  macros.rs  offline.rs  offline_game.rs  online.rs  online_game.rs  online_lobby.rs  socket.rs
src/termin/: buffer.rs  crossterm_handler.rs  elements.rs  terminal_window.rs  window.rs
src/termin/elements/: input.rs  rectangle.rs  text.rs
