[package]
name = "othello-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.25.0", features = ["event-stream"]}
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
url = "2.3.1"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
copypasta = "0.8.1"
tokio-tungstenite = "*"
futures-util = "0.3.26"
tokio = { version = "1.25.0", features = ["macros"] }
